# fonketh

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKERFILE  Dockerfile  README.md
.github/workflows/: build-release.yml  ci.yml  main.yml
.sqlx/: query-125413c22079038ec64b5609c27a7097286fa8ab8c986eb63471e4ee542a4b10.json  query-419ff5ff3e9e1dfbd7ecbd563d7695f081dffa42b55dec59ef219d5c89b1fdbc.json  query-428cb26684c71506780db0d86d32ff38e3bc4d9fbefc666d5dff199a5cbbcc58.json  query-4c78514efaa29f68d0340d477678848597991b4540bc4c61aa3388472ac16f4c.json  query-4eeb5e19459773fd0166afd222fe495dc190adbec240b2895295fcf2462ad86f.json  query-9108d891e775f507574dff43303703d608ba40f9acac8e0100cfc458df5b4bdd.json  query-b7cc3b35cd345ec11478e444d701ea7fc11e736be570ff64e09ec6d8d53d0851.json  query-ec71a9fbcd2bc673a4e957c0202394bcda9c44f96defe585d3c7857c9b40d631.json  query-f10d5c0a53c01f46d0841bd9353b9e324ea733310ec9a92a4746092303630328.json
contracts/: Rewarder.sol  ens.json  rewarder.json
crates/api/: Cargo.toml
crates/api/src/: health_status.rs  lib.rs  mine.rs  utils.rs  world_status.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/contract/: Cargo.toml
crates/contract/src/: ens.rs  lib.rs  miner.rs
crates/contract/src/mine/: miner.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  map.rs  utils.rs
crates/core/src/auth/: mod.rs  signer.rs  verifier.rs
crates/core/src/channels/: message.rs  mod.rs  receiver.rs  sender.rs
crates/core/src/events/: event.rs  mod.rs
crates/core/src/interface/: app.rs  mod.rs
crates/core/src/map/: world.rs
crates/core/src/mine/: miner.rs  mod.rs
crates/core/src/movements/: keyboard.rs  mod.rs  motion.rs
crates/core/src/player/: character.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  network.rs  state.rs
crates/interface/: Cargo.toml
crates/interface/src/: chat.rs  coins.rs  components.rs  hud.rs  lib.rs  main.rs  minings.rs  movements.rs  resources.rs
crates/interface/src/logic/: app.rs  keyboard.rs  mod.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/network/src/p2p/: mod.rs  network.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: events.rs  lib.rs  message.rs
crates/sprite/: Cargo.toml
crates/sprite/src/: character.rs  image.rs  lib.rs  tests.rs
crates/sprite/src/sprite/: character.rs  image.rs  mod.rs
migrations/: 20251013154329_nodes.sql  20251013180216_player_state.sql
