[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/contract",
    "crates/core",
    "crates/primitives",
    "crates/interface",
    "crates/network",
    "crates/sprite",
]

[workspace.dependencies]
serde = { version = "1.0.222", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Local dependencies
game_contract = { path = "crates/contract" }
game_core = { path = "crates/core" }
game_network = { path = "crates/network" }
game_primitives = { path = "crates/primitives" }
game_interface = { path = "crates/interface" }
game_sprite = { path = "crates/sprite" }
