[package]
name = "game_app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
game_core = { workspace = true, features = [] }
tracing-subscriber.workspace = true
tokio.workspace = true

[dev-dependencies]
game_core = { workspace = true, features = ["interface", "api"] }
