[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["interface"]
interface = ["bevy"]

[dependencies]
game_network = { path = "../network" }
game_contract = { path = "../contract" }
bevy = { version = "0.16.1", optional = true }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
