[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
mine = []
interface = ["game_interface"]
api = ["game_api"]

[dependencies]
game_network.workspace = true
game_contract.workspace = true
game_primitives.workspace = true
game_interface = { workspace = true, optional = true }
game_api = { workspace = true, optional = true }

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
