[package]
name = "game_network"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "kad",
] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
